@@ -1705,20 +1705,24 @@ static int updatedb(const char *dbname, const char *hostname, char *ip, int *sig
 	if(!nodb && !ims) {
 	    logg("%s is up to date (version: %d, sigs: %d, f-level: %d, builder: %s)\n", localname, current->version, current->sigs, current->fl, current->builder);
 	    *signo += current->sigs;
+#ifdef HAVE_RESOLV_H
 	    if(mirror_stats && strlen(ip)) {
 		snprintf(squery, sizeof(squery), "%s.%u.%u.%u.%u.%s.ping.clamav.net", dbname, current->version, flevel, 1, w32, ip);
 		dnsquery(squery, T_A, NULL);
 	    }
+#endif
 	    cl_cvdfree(current);
 	    return 1;
 	}
 
 	if(!remote) {
 	    logg("^Can't read %s header from %s (IP: %s)\n", cvdfile, hostname, ip);
+#ifdef HAVE_RESOLV_H
 	    if(mirror_stats && strlen(ip)) {
 		snprintf(squery, sizeof(squery), "%s.%u.%u.%u.%u.%s.ping.clamav.net", dbname, current->version + 1, flevel, 0, w32, ip);
 		dnsquery(squery, T_A, NULL);
 	    }
+#endif
 	    cl_cvdfree(current);
 	    return 58;
 	}
@@ -1762,10 +1766,12 @@ static int updatedb(const char *dbname, const char *hostname, char *ip, int *sig
 	    ret = getcvd(cvdfile, newfile, hostname, ip, localip, proxy, port, user, pass, uas, newver, ctimeout, rtimeout, mdat, logerr, can_whitelist, opts, attempt);
 
 	if(ret) {
+#ifdef HAVE_RESOLV_H
 	    if(mirror_stats && strlen(ip)) {
 		snprintf(squery, sizeof(squery), "%s.%u.%u.%u.%u.%s.ping.clamav.net", dbname, 0, flevel, 0, w32, ip);
 		dnsquery(squery, T_A, NULL);
 	    }
+#endif
 	    memset(ip, 0, 16);
 	    free(newfile);
 	    return ret;
@@ -1784,10 +1790,12 @@ static int updatedb(const char *dbname, const char *hostname, char *ip, int *sig
 		    llogerr = (j == maxattempts);
 		ret = getpatch(dbname, tmpdir, i, hostname, ip, localip, proxy, port, user, pass, uas, ctimeout, rtimeout, mdat, llogerr, can_whitelist, opts, attempt == 1 ? j : attempt);
 		if(ret == 52 || ret == 58) {
+#ifdef HAVE_RESOLV_H
 		    if(mirror_stats && strlen(ip)) {
 			snprintf(squery, sizeof(squery), "%s.%u.%u.%u.%u.%s.ping.clamav.net", dbname, i, flevel, 0, w32, ip);
 			dnsquery(squery, T_A, NULL);
 		    }
+#endif
 		    memset(ip, 0, 16);
 		    continue;
 		} else {
@@ -1806,10 +1814,12 @@ static int updatedb(const char *dbname, const char *hostname, char *ip, int *sig
 	    mirman_whitelist(mdat, 2);
 	    ret = getcvd(cvdfile, newfile, hostname, ip, localip, proxy, port, user, pass, uas, newver, ctimeout, rtimeout, mdat, logerr, can_whitelist, opts, attempt);
 	    if(ret) {
+#ifdef HAVE_RESOLV_H
 		if(mirror_stats && strlen(ip)) {
 		    snprintf(squery, sizeof(squery), "%s.%u.%u.%u.%u.%s.ping.clamav.net", dbname, 0, flevel, 0, w32, ip);
 		    dnsquery(squery, T_A, NULL);
 		}
+#endif
 		free(newfile);
 		return ret;
 	    }
@@ -1905,10 +1915,12 @@ static int updatedb(const char *dbname, const char *hostname, char *ip, int *sig
     }
 
     *signo += current->sigs;
+#ifdef HAVE_RESOLV_H
     if(mirror_stats && strlen(ip)) {
 	snprintf(squery, sizeof(squery), "%s.%u.%u.%u.%u.%s.ping.clamav.net", dbname, current->version, flevel, 1, w32, ip);
 	dnsquery(squery, T_A, NULL);
     }
+#endif
     cl_cvdfree(current);
     return 0;
 }
