@@ -1,3 +1,7 @@
+Mon Oct 10 14:41:48 CEST 2011 (tk)
+----------------------------------
+ * freshclam/manager.c: fix error when compiling without DNS support (bb#3056)
+
 Sat Oct  8 12:19:49 EEST 2011 (edwin)
 -------------------------------------
  * libclamav/pdf.c: flag and dump PDF objects with /Launch (bb #3514)
